some flask stuff

--- a/backend.ipynb
+++ b/backend.ipynb
@@ -79,7 +79,9 @@
     "        self.location = location\n",
     "        self.desc = desc\n",
     "        self.skill_level = skill_level\n",
-    "        self.members = {'creator':[], 'member':[]} #add more member types\n",
+    "        self.admins = [] #if one person: needs to be added automatically; else: creator can add users as admins\n",
+    "        self.members = {'creators':self.admins, 'member':[]} #add more member types depending on project\n",
+    "        \n",
     "        if category != 'learning' and (project_type is None or project_type not in self.project_types):\n",
     "            raise TypeError(f'Must be in {self.project_types}')\n",
     "        else:\n",
@@ -201,21 +203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-23T02:58:35.332469Z",
-     "iopub.status.busy": "2021-01-23T02:58:35.331807Z",
-     "iopub.status.idle": "2021-01-23T02:58:35.345115Z",
-     "shell.execute_reply": "2021-01-23T02:58:35.341484Z",
-     "shell.execute_reply.started": "2021-01-23T02:58:35.332377Z"
+     "iopub.execute_input": "2021-01-23T21:04:53.504585Z",
+     "iopub.status.busy": "2021-01-23T21:04:53.503906Z",
+     "iopub.status.idle": "2021-01-23T21:04:53.519566Z",
+     "shell.execute_reply": "2021-01-23T21:04:53.516741Z",
+     "shell.execute_reply.started": "2021-01-23T21:04:53.504332Z"
     }
    },
    "outputs": [],
    "source": [
-    "class A:\n",
+    "class A(object):\n",
+    "    VAR = os.environ.get('VAR') or 420\n",
     "    def __init__(self):\n",
-    "        self.potato = 3\n",
+    "        self._potato = 3\n",
     "        self.learning_categories = {\"Math\":['Calculus', 'Differential Equations']}\n",
     "    def p():\n",
     "        print(3)\n",
@@ -237,19 +240,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-23T02:58:35.944354Z",
-     "iopub.status.busy": "2021-01-23T02:58:35.943733Z",
-     "iopub.status.idle": "2021-01-23T02:58:35.951577Z",
-     "shell.execute_reply": "2021-01-23T02:58:35.949448Z",
-     "shell.execute_reply.started": "2021-01-23T02:58:35.944067Z"
+     "iopub.execute_input": "2021-01-23T07:45:38.069471Z",
+     "iopub.status.busy": "2021-01-23T07:45:38.068863Z",
+     "iopub.status.idle": "2021-01-23T07:45:38.084300Z",
+     "shell.execute_reply": "2021-01-23T07:45:38.082860Z",
+     "shell.execute_reply.started": "2021-01-23T07:45:38.069249Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bob = C('very orange')"
+    "bob = C('very orange')\n",
+    "bob._potato"
    ]
   }
  ],
