--- a/backend.ipynb
+++ b/backend.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-23T05:31:50.560506Z",
-     "iopub.status.busy": "2021-01-23T05:31:50.559634Z",
-     "iopub.status.idle": "2021-01-23T05:31:50.609066Z",
-     "shell.execute_reply": "2021-01-23T05:31:50.606061Z",
-     "shell.execute_reply.started": "2021-01-23T05:31:50.560141Z"
+     "iopub.execute_input": "2021-01-24T04:48:04.358663Z",
+     "iopub.status.busy": "2021-01-24T04:48:04.358154Z",
+     "iopub.status.idle": "2021-01-24T04:48:04.416438Z",
+     "shell.execute_reply": "2021-01-24T04:48:04.415133Z",
+     "shell.execute_reply.started": "2021-01-24T04:48:04.358442Z"
     }
    },
    "outputs": [],
@@ -90,6 +90,9 @@
     "    def addMember(self,member,role):\n",
     "        self.members[role].append(member)\n",
     "        \n",
+    "    def __repr__(self):\n",
+    "        return f'<{self.categories[self.category].__name__}_{hash(self)}>'\n",
+    "        \n",
     "class Learning(Project):\n",
     "    '''Can be study group for a course, or just auto-didacts studying a subject together'''\n",
     "    def __init__(self, location, desc, pace, learning_category, subject):\n",
@@ -135,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-23T05:31:51.881749Z",
-     "iopub.status.busy": "2021-01-23T05:31:51.880771Z",
-     "iopub.status.idle": "2021-01-23T05:32:05.430760Z",
-     "shell.execute_reply": "2021-01-23T05:32:05.428989Z",
-     "shell.execute_reply.started": "2021-01-23T05:31:51.881258Z"
+     "iopub.execute_input": "2021-01-24T04:48:05.232094Z",
+     "iopub.status.busy": "2021-01-24T04:48:05.231482Z",
+     "iopub.status.idle": "2021-01-24T04:48:09.656327Z",
+     "shell.execute_reply": "2021-01-24T04:48:09.653463Z",
+     "shell.execute_reply.started": "2021-01-24T04:48:05.231983Z"
     }
    },
    "outputs": [
@@ -151,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "category:  learning\n",
-      "location:  us\n",
+      "location:  a\n",
       "description:  a\n",
       "pace:  quarter\n",
       "learning category:  math\n",
@@ -161,62 +164,62 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Learning at 0x7fa2d8d0c2d0>"
+       "<Learning_8793231843205>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "makeProject()"
+    "makeProject() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-23T05:37:07.575539Z",
-     "iopub.status.busy": "2021-01-23T05:37:07.574923Z",
-     "iopub.status.idle": "2021-01-23T05:37:07.585103Z",
-     "shell.execute_reply": "2021-01-23T05:37:07.583700Z",
-     "shell.execute_reply.started": "2021-01-23T05:37:07.575426Z"
+     "iopub.execute_input": "2021-01-24T04:36:47.729296Z",
+     "iopub.status.busy": "2021-01-24T04:36:47.726505Z",
+     "iopub.status.idle": "2021-01-24T04:36:47.784628Z",
+     "shell.execute_reply": "2021-01-24T04:36:47.771304Z",
+     "shell.execute_reply.started": "2021-01-24T04:36:47.728712Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<__main__.Learning at 0x7fa2d8d0c2d0>]"
+       "'learning:8793231818437'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ProjectDataBase.projs"
+    "str(ProjectDataBase.projs[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-23T21:04:53.504585Z",
-     "iopub.status.busy": "2021-01-23T21:04:53.503906Z",
-     "iopub.status.idle": "2021-01-23T21:04:53.519566Z",
-     "shell.execute_reply": "2021-01-23T21:04:53.516741Z",
-     "shell.execute_reply.started": "2021-01-23T21:04:53.504332Z"
+     "iopub.execute_input": "2021-01-24T04:45:18.931436Z",
+     "iopub.status.busy": "2021-01-24T04:45:18.930713Z",
+     "iopub.status.idle": "2021-01-24T04:45:18.950628Z",
+     "shell.execute_reply": "2021-01-24T04:45:18.945562Z",
+     "shell.execute_reply.started": "2021-01-24T04:45:18.931084Z"
     }
    },
    "outputs": [],
    "source": [
     "class A(object):\n",
-    "    VAR = os.environ.get('VAR') or 420\n",
+    "    #VAR = os.environ.get('VAR') or 420\n",
     "    def __init__(self):\n",
     "        self._potato = 3\n",
     "        self.learning_categories = {\"Math\":['Calculus', 'Differential Equations']}\n",
@@ -235,19 +238,21 @@
     "        \n",
     "    def p(self):\n",
     "        return self.potato\n",
-    "    \n"
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f'{__class__.__name__} {hash(self)}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-23T07:45:38.069471Z",
-     "iopub.status.busy": "2021-01-23T07:45:38.068863Z",
-     "iopub.status.idle": "2021-01-23T07:45:38.084300Z",
-     "shell.execute_reply": "2021-01-23T07:45:38.082860Z",
-     "shell.execute_reply.started": "2021-01-23T07:45:38.069249Z"
+     "iopub.execute_input": "2021-01-24T05:15:24.174708Z",
+     "iopub.status.busy": "2021-01-24T05:15:24.173915Z",
+     "iopub.status.idle": "2021-01-24T05:15:24.186939Z",
+     "shell.execute_reply": "2021-01-24T05:15:24.185570Z",
+     "shell.execute_reply.started": "2021-01-24T05:15:24.174430Z"
     }
    },
    "outputs": [
@@ -257,15 +262,48 @@
        "3"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bob = C('very orange')\n",
+    "sal = C('yum')\n",
     "bob._potato"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-01-24T05:15:33.586827Z",
+     "iopub.status.busy": "2021-01-24T05:15:33.586213Z",
+     "iopub.status.idle": "2021-01-24T05:15:33.598229Z",
+     "shell.execute_reply": "2021-01-24T05:15:33.596633Z",
+     "shell.execute_reply.started": "2021-01-24T05:15:33.586705Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8793231967897 8793231967761\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hash(bob), hash(sal))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
