--- a/backend.ipynb
+++ b/backend.ipynb
@@ -27,19 +27,18 @@
    "source": [
     "class ProjectDB:\n",
     "    '''Contains all projects and certain attributes'''\n",
-    "    def __init__(self):\n",
-    "        self.projs = [] #needs a better way to be indexed. hash table of sorts?\n",
-    "        self.categories = {'learning': Learning, 'software development':SoftwareDev} #used in proj creation and querying\n",
-    "        self.category_desc = {'Engineering': \"Have you been sketching out a new invention but don't know how to deploy it to production? Lorem ipsum...\"}\n",
-    "        #Various project properties\n",
-    "        ## General\n",
-    "        self.skill_levels = ('beginnger','intermediate','advanced')\n",
-    "        self.project_types = (\"casual\", \"professional\")\n",
-    "        self.possible_locations = {} #{Country:{States: {cities, schools etc}}}, prob upload from json\n",
-    "        self.locations = {} #current locations of projects, updated as projects are added\n",
-    "        ## Learning\n",
-    "        self.learning_categories = {\"math\":['calculus', 'differential equations']}\n",
-    "        self.pace_types = (\"custom-pace\",\"self-paced\", \"quarter\",\"semester\")\n",
+    "    projs = [] #needs a better way to be indexed. hash table of sorts?\n",
+    "    categories = {'learning': Learning, 'software development':SoftwareDev} #used in proj creation and querying\n",
+    "    category_desc = {'Engineering': \"Have you been sketching out a new invention but don't know how to deploy it to production? Lorem ipsum...\"}\n",
+    "    #Various project properties\n",
+    "    ## General\n",
+    "    skill_levels = ('beginnger','intermediate','advanced')\n",
+    "    project_types = (\"casual\", \"professional\")\n",
+    "    possible_locations = {} #{Country:{States: {cities, schools etc}}}, prob upload from json\n",
+    "    locations = {} #current locations of projects, updated as projects are added\n",
+    "    ## Learning\n",
+    "    learning_categories = {\"math\":['calculus', 'differential equations']}\n",
+    "    pace_types = (\"custom-pace\",\"self-paced\", \"quarter\",\"semester\")\n",
     "    \n",
     "    def add_proj(self, proj):\n",
     "        self.projs.append(proj)\n",
@@ -206,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 92,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-24T04:45:18.931436Z",
-     "iopub.status.busy": "2021-01-24T04:45:18.930713Z",
-     "iopub.status.idle": "2021-01-24T04:45:18.950628Z",
-     "shell.execute_reply": "2021-01-24T04:45:18.945562Z",
-     "shell.execute_reply.started": "2021-01-24T04:45:18.931084Z"
+     "iopub.execute_input": "2021-01-25T22:19:32.340024Z",
+     "iopub.status.busy": "2021-01-25T22:19:32.339397Z",
+     "iopub.status.idle": "2021-01-25T22:19:32.353387Z",
+     "shell.execute_reply": "2021-01-25T22:19:32.350735Z",
+     "shell.execute_reply.started": "2021-01-25T22:19:32.339715Z"
     }
    },
    "outputs": [],
@@ -226,84 +225,28 @@
     "    def p():\n",
     "        print(3)\n",
     "class B(A):\n",
+    "    x = 2\n",
     "    def __init__(self, carrot):\n",
     "        #super(A,self).__init__()\n",
     "        super().__init__()\n",
     "        self.carrot=carrot\n",
+    "    def __str__(self):\n",
+    "        return \"AYO\"\n",
     "\n",
     "class C(B):\n",
+    "    ya= 'yar'\n",
     "    def __init__(self, legume):\n",
     "        #super(A,self).__init__()\n",
     "        super().__init__(carrot=legume)\n",
-    "        \n",
+    "    \n",
+    "    def sumn(self):\n",
+    "        return self.ya + 'ggg'\n",
     "    def p(self):\n",
     "        return self.potato\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return f'{__class__.__name__} {hash(self)}'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-01-24T05:15:24.174708Z",
-     "iopub.status.busy": "2021-01-24T05:15:24.173915Z",
-     "iopub.status.idle": "2021-01-24T05:15:24.186939Z",
-     "shell.execute_reply": "2021-01-24T05:15:24.185570Z",
-     "shell.execute_reply.started": "2021-01-24T05:15:24.174430Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bob = C('very orange')\n",
-    "sal = C('yum')\n",
-    "bob._potato"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-01-24T05:15:33.586827Z",
-     "iopub.status.busy": "2021-01-24T05:15:33.586213Z",
-     "iopub.status.idle": "2021-01-24T05:15:33.598229Z",
-     "shell.execute_reply": "2021-01-24T05:15:33.596633Z",
-     "shell.execute_reply.started": "2021-01-24T05:15:33.586705Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8793231967897 8793231967761\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(hash(bob), hash(sal))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
