--- a/backend.ipynb
+++ b/backend.ipynb
@@ -247,6 +247,37 @@
     "    def __repr__(self):\n",
     "        return f'{__class__.__name__} {hash(self)}'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-01-28T02:23:00.783391Z",
+     "iopub.status.busy": "2021-01-28T02:23:00.782444Z",
+     "iopub.status.idle": "2021-01-28T02:23:00.793834Z",
+     "shell.execute_reply": "2021-01-28T02:23:00.792356Z",
+     "shell.execute_reply.started": "2021-01-28T02:23:00.782991Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def x(*args,**kwargs):\n",
+    "    return\n",
+    "    if ad:\n",
+    "        self.a\n",
+    "    print(aasdasd)\n",
+    "\n",
+    "\n",
+    "    x(a=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
