--- a/backend.ipynb
+++ b/backend.ipynb
@@ -125,6 +125,7 @@
     "    category = input('category: ')\n",
     "    args_ = projects[category].__init__.__code__.co_varnames[1:]\n",
     "    input_args = []\n",
+    "    #this is the form\n",
     "    for a in args_:\n",
     "        input_args.append(input(f'{arg_input_dict[a]}: '))\n",
     "    proj = projects[category](*input_args)\n",
@@ -250,26 +251,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-28T02:23:00.783391Z",
-     "iopub.status.busy": "2021-01-28T02:23:00.782444Z",
-     "iopub.status.idle": "2021-01-28T02:23:00.793834Z",
-     "shell.execute_reply": "2021-01-28T02:23:00.792356Z",
-     "shell.execute_reply.started": "2021-01-28T02:23:00.782991Z"
+     "iopub.execute_input": "2021-02-06T02:55:40.620692Z",
+     "iopub.status.busy": "2021-02-06T02:55:40.616741Z",
+     "iopub.status.idle": "2021-02-06T02:55:41.083638Z",
+     "shell.execute_reply": "2021-02-06T02:55:41.079008Z",
+     "shell.execute_reply.started": "2021-02-06T02:55:40.620505Z"
     }
    },
    "outputs": [],
    "source": [
     "def x(*args,**kwargs):\n",
-    "    return\n",
-    "    if ad:\n",
-    "        self.a\n",
+    "#     return\n",
+    "#     if a:\n",
+    "#         self.a\n",
     "    print(aasdasd)\n",
     "\n",
     "\n",
-    "    x(a=3)"
+    "x(aasdasd=3)"
    ]
   },
   {
