--- a/backend.ipynb
+++ b/backend.ipynb
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-25T22:19:32.340024Z",
-     "iopub.status.busy": "2021-01-25T22:19:32.339397Z",
-     "iopub.status.idle": "2021-01-25T22:19:32.353387Z",
-     "shell.execute_reply": "2021-01-25T22:19:32.350735Z",
-     "shell.execute_reply.started": "2021-01-25T22:19:32.339715Z"
+     "iopub.execute_input": "2021-02-06T03:13:04.493746Z",
+     "iopub.status.busy": "2021-02-06T03:13:04.493006Z",
+     "iopub.status.idle": "2021-02-06T03:13:04.507537Z",
+     "shell.execute_reply": "2021-02-06T03:13:04.505056Z",
+     "shell.execute_reply.started": "2021-02-06T03:13:04.493432Z"
     }
    },
    "outputs": [],
@@ -238,8 +238,8 @@
     "    ya= 'yar'\n",
     "    def __init__(self, legume):\n",
     "        #super(A,self).__init__()\n",
-    "        super().__init__(carrot=legume)\n",
-    "    \n",
+    "        #super().__init__(carrot=legume)\n",
+    "        pass\n",
     "    def sumn(self):\n",
     "        return self.ya + 'ggg'\n",
     "    def p(self):\n",
@@ -251,26 +251,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-06T03:13:05.563091Z",
+     "iopub.status.busy": "2021-02-06T03:13:05.562334Z",
+     "iopub.status.idle": "2021-02-06T03:13:05.575803Z",
+     "shell.execute_reply": "2021-02-06T03:13:05.574145Z",
+     "shell.execute_reply.started": "2021-02-06T03:13:05.562777Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = C('yes')\n",
+    "x.x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-02-06T02:55:40.620692Z",
-     "iopub.status.busy": "2021-02-06T02:55:40.616741Z",
-     "iopub.status.idle": "2021-02-06T02:55:41.083638Z",
-     "shell.execute_reply": "2021-02-06T02:55:41.079008Z",
-     "shell.execute_reply.started": "2021-02-06T02:55:40.620505Z"
+     "iopub.execute_input": "2021-02-12T01:03:03.716419Z",
+     "iopub.status.busy": "2021-02-12T01:03:03.715666Z",
+     "iopub.status.idle": "2021-02-12T01:03:03.747252Z",
+     "shell.execute_reply": "2021-02-12T01:03:03.741433Z",
+     "shell.execute_reply.started": "2021-02-12T01:03:03.716143Z"
     }
    },
    "outputs": [],
    "source": [
-    "def x(*args,**kwargs):\n",
+    "def x(*args, **kwargs):\n",
     "#     return\n",
     "#     if a:\n",
     "#         self.a\n",
-    "    print(aasdasd)\n",
+    "    print(g)\n",
     "\n",
     "\n",
-    "x(aasdasd=3)"
+    "x({'g':3})"
    ]
   },
   {
