--- a/backend.ipynb
+++ b/backend.ipynb
@@ -205,24 +205,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project form pseudocode"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "form = ProjectForm()\n",
+    "if form.validate_on_submit():\n",
+    "    project = Project(creator=current_user, name = form.name.data, category = form.category.data, #consider using **kwargs\n",
+    "                    descr=form.descr.data)\n",
+    "    db.session.add(project)\n",
+    "    spec_arg_names = [attr for attr in list(vars(ProjectForm)) if not attr.startswith(\"__\")][5:-1]\n",
+    "    spec_args = []\n",
+    "    for a in spec_arg_names:\n",
+    "        exec(f'spec_args.append(form.{a}.data)')\n",
+    "    spec_args = [a for a in spec_args if a != None]\n",
+    "    project_spec = ProjectDB.categories[form.category.data](*spec_args) #the specific project\n",
+    "    db.session.add(project_spec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-02-06T03:13:04.493746Z",
-     "iopub.status.busy": "2021-02-06T03:13:04.493006Z",
-     "iopub.status.idle": "2021-02-06T03:13:04.507537Z",
-     "shell.execute_reply": "2021-02-06T03:13:04.505056Z",
-     "shell.execute_reply.started": "2021-02-06T03:13:04.493432Z"
+     "iopub.execute_input": "2021-02-20T04:01:58.057040Z",
+     "iopub.status.busy": "2021-02-20T04:01:58.056302Z",
+     "iopub.status.idle": "2021-02-20T04:01:58.072514Z",
+     "shell.execute_reply": "2021-02-20T04:01:58.071080Z",
+     "shell.execute_reply.started": "2021-02-20T04:01:58.056789Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class ProjectForm():\n",
+    "    \"\"\"Create a new project, on /index\"\"\"\n",
+    "    categories = ['Select one', 'learning','software development'] #these should be inherited\n",
+    "    learning_categories = ['None', 'Math']\n",
+    "    name = None\n",
+    "        \n",
+    "    category = None\n",
+    "    descr = None\n",
+    "        \n",
+    "    #Learning specific\n",
+    "    learning_category = None\n",
+    "    x1 = None\n",
+    "    x2 = 6\n",
+    "    submit = None\n",
+    "    x3 = None\n",
+    "\n",
+    "var_arg = [attr for attr in list(vars(ProjectForm)) if not attr.startswith(\"__\")][5:-1]\n",
+    "\n",
+    "spec_args = []\n",
+    "for a in var_arg:\n",
+    "    exec(f'spec_args.append(ProjectForm.{a})')\n",
+    "[a for a in spec_args if a != None]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-20T03:47:13.551289Z",
+     "iopub.status.busy": "2021-02-20T03:47:13.550489Z",
+     "iopub.status.idle": "2021-02-20T03:47:13.565459Z",
+     "shell.execute_reply": "2021-02-20T03:47:13.563558Z",
+     "shell.execute_reply.started": "2021-02-20T03:47:13.550952Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exec(f'x = A.var')\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-20T03:20:58.904818Z",
+     "iopub.status.busy": "2021-02-20T03:20:58.904075Z",
+     "iopub.status.idle": "2021-02-20T03:20:58.927190Z",
+     "shell.execute_reply": "2021-02-20T03:20:58.924561Z",
+     "shell.execute_reply.started": "2021-02-20T03:20:58.904517Z"
     }
    },
    "outputs": [],
    "source": [
     "class A(object):\n",
     "    #VAR = os.environ.get('VAR') or 420\n",
-    "    def __init__(self):\n",
+    "    var = '1'\n",
+    "    kk = 3\n",
+    "    def __init__(self, type_):\n",
     "        self._potato = 3\n",
-    "        self.learning_categories = {\"Math\":['Calculus', 'Differential Equations']}\n",
+    "        self.learning_categories = {\"Math\":['Calculus', 'Differential Equations']}   \n",
     "    def p():\n",
     "        print(3)\n",
     "class B(A):\n",
@@ -247,6 +354,34 @@
     "    \n",
     "    def __repr__(self):\n",
     "        return f'{__class__.__name__} {hash(self)}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-20T03:25:28.568264Z",
+     "iopub.status.busy": "2021-02-20T03:25:28.567412Z",
+     "iopub.status.idle": "2021-02-20T03:25:28.580573Z",
+     "shell.execute_reply": "2021-02-20T03:25:28.579058Z",
+     "shell.execute_reply.started": "2021-02-20T03:25:28.567902Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['kk', 'var']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[attr for attr in dir(A) if not callable(getattr(A, attr)) and not attr.startswith(\"__\")]"
    ]
   },
   {
@@ -280,34 +415,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-02-12T01:03:03.716419Z",
-     "iopub.status.busy": "2021-02-12T01:03:03.715666Z",
-     "iopub.status.idle": "2021-02-12T01:03:03.747252Z",
-     "shell.execute_reply": "2021-02-12T01:03:03.741433Z",
-     "shell.execute_reply.started": "2021-02-12T01:03:03.716143Z"
+     "iopub.execute_input": "2021-02-20T02:54:37.857435Z",
+     "iopub.status.busy": "2021-02-20T02:54:37.856571Z",
+     "iopub.status.idle": "2021-02-20T02:54:37.922764Z",
+     "shell.execute_reply": "2021-02-20T02:54:37.918883Z",
+     "shell.execute_reply.started": "2021-02-20T02:54:37.857298Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'g' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-cf1d39158f1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'g'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-2-cf1d39158f1a>\u001b[0m in \u001b[0;36mx\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'g' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def x(*args, **kwargs):\n",
-    "#     return\n",
-    "#     if a:\n",
-    "#         self.a\n",
+    "\n",
     "    print(g)\n",
     "\n",
     "\n",
-    "x({'g':3})"
+    "x(None,{'g':3})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
