--- a/backend.ipynb
+++ b/backend.ipynb
@@ -311,14 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-02-20T03:20:58.904818Z",
-     "iopub.status.busy": "2021-02-20T03:20:58.904075Z",
-     "iopub.status.idle": "2021-02-20T03:20:58.927190Z",
-     "shell.execute_reply": "2021-02-20T03:20:58.924561Z",
-     "shell.execute_reply.started": "2021-02-20T03:20:58.904517Z"
+     "iopub.execute_input": "2021-02-20T17:12:55.850258Z",
+     "iopub.status.busy": "2021-02-20T17:12:55.849693Z",
+     "iopub.status.idle": "2021-02-20T17:12:55.864890Z",
+     "shell.execute_reply": "2021-02-20T17:12:55.863181Z",
+     "shell.execute_reply.started": "2021-02-20T17:12:55.850143Z"
     }
    },
    "outputs": [],
@@ -327,7 +327,7 @@
     "    #VAR = os.environ.get('VAR') or 420\n",
     "    var = '1'\n",
     "    kk = 3\n",
-    "    def __init__(self, type_):\n",
+    "    def __init__(self):\n",
     "        self._potato = 3\n",
     "        self.learning_categories = {\"Math\":['Calculus', 'Differential Equations']}   \n",
     "    def p():\n",
@@ -415,38 +415,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-02-20T02:54:37.857435Z",
-     "iopub.status.busy": "2021-02-20T02:54:37.856571Z",
-     "iopub.status.idle": "2021-02-20T02:54:37.922764Z",
-     "shell.execute_reply": "2021-02-20T02:54:37.918883Z",
-     "shell.execute_reply.started": "2021-02-20T02:54:37.857298Z"
+     "iopub.execute_input": "2021-02-20T18:16:04.915834Z",
+     "iopub.status.busy": "2021-02-20T18:16:04.915090Z",
+     "iopub.status.idle": "2021-02-20T18:16:04.927689Z",
+     "shell.execute_reply": "2021-02-20T18:16:04.926497Z",
+     "shell.execute_reply.started": "2021-02-20T18:16:04.915522Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'g' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-cf1d39158f1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'g'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-2-cf1d39158f1a>\u001b[0m in \u001b[0;36mx\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'g' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x={1:0,2:0}\n",
+    "for i in x:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-20T18:18:36.271740Z",
+     "iopub.status.busy": "2021-02-20T18:18:36.270925Z",
+     "iopub.status.idle": "2021-02-20T18:18:36.302162Z",
+     "shell.execute_reply": "2021-02-20T18:18:36.300828Z",
+     "shell.execute_reply.started": "2021-02-20T18:18:36.271420Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2]\n"
      ]
     }
    ],
    "source": [
     "def x(*args, **kwargs):\n",
-    "\n",
+    "    for ka in kwargs.keys:\n",
+    "        exec(f'{ka} = kwargs[{ka}]')\n",
     "    print(g)\n",
     "\n",
-    "\n",
-    "x(None,{'g':3})"
+    "def x():\n",
+    "    a=[]\n",
+    "    for i in range(3):\n",
+    "        exec('a.append(i)')\n",
+    "    print(a)\n",
+    "#x(None,{'g':3})\n",
+    "x()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-20T17:11:49.964100Z",
+     "iopub.status.busy": "2021-02-20T17:11:49.963558Z",
+     "iopub.status.idle": "2021-02-20T17:11:49.972452Z",
+     "shell.execute_reply": "2021-02-20T17:11:49.969656Z",
+     "shell.execute_reply.started": "2021-02-20T17:11:49.963999Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import fooof,\\\n",
+    "        numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
