form char lim helperfunc

--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -497,6 +497,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-02T05:49:09.882536Z",
+     "iopub.status.busy": "2021-04-02T05:49:09.881971Z",
+     "iopub.status.idle": "2021-04-02T05:49:09.893808Z",
+     "shell.execute_reply": "2021-04-02T05:49:09.891477Z",
+     "shell.execute_reply.started": "2021-04-02T05:49:09.882466Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def col_char_lim(model):\n",
+    "    \"\"\"returns dict of form {colname:length} for string columns\"\"\"\n",
+    "    #tb_info = str(vars(model)['__table__'].__dict__['constraints']).split('Column(')\n",
+    "    tb_info=\"{ForeignKeyConstraint(<sqlalchemy.sql.base.ColumnCollection object at 0x7f8f301d9810>, None, table=Table('project', MetaData(bind=None), Column('id', Integer(), table=<project>, primary_key=True, nullable=False), Column('category', String(length=60), table=<project>), Column('name', String(length=60), table=<project>), Column('descr', String(length=140), table=<project>), Column('skill_level', String(length=20), table=<project>), Column('setting', String(length=20), table=<project>), Column('language', String(length=5), table=<project>), Column('timestamp', DateTime(), table=<project>, default=ColumnDefault(<function datetime.utcnow at 0x7f8f301c0b00>)), Column('user_id', Integer(), ForeignKey('user.id'), table=<project>), schema=None)), PrimaryKeyConstraint(Column('id', Integer(), table=<project>, primary_key=True, nullable=False))}\".split('Column(')\n",
+    "    tb_lens = dict()\n",
+    "    for v in tb_info:\n",
+    "        if 'length=' in v:\n",
+    "            colname, c_len = re.findall(r\"\\'(.+?)\\'\", v)[0], re.findall(r\"length=(.+?)\\)\", v)[0]\n",
+    "            tb_lens[colname] = int(c_len)\n",
+    "    return tb_lens\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-02T05:49:10.628045Z",
+     "iopub.status.busy": "2021-04-02T05:49:10.627547Z",
+     "iopub.status.idle": "2021-04-02T05:49:10.642922Z",
+     "shell.execute_reply": "2021-04-02T05:49:10.641728Z",
+     "shell.execute_reply.started": "2021-04-02T05:49:10.627980Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'category': 60,\n",
+       " 'name': 60,\n",
+       " 'descr': 140,\n",
+       " 'skill_level': 20,\n",
+       " 'setting': 20,\n",
+       " 'language': 5}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_char_lim(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-02T04:28:59.132417Z",
+     "iopub.status.busy": "2021-04-02T04:28:59.131923Z",
+     "iopub.status.idle": "2021-04-02T04:28:59.142585Z",
+     "shell.execute_reply": "2021-04-02T04:28:59.141041Z",
+     "shell.execute_reply.started": "2021-04-02T04:28:59.132356Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"{ForeignKeyConstraint(<sqlalchemy.sql.base.ColumnCollection object at 0x7f8f301d9810>, None, table=Table('project', MetaData(bind=None), \",\n",
+       " \"'id', Integer(), table=<project>, primary_key=True, nullable=False), \",\n",
+       " \"'category', String(length=60), table=<project>), \",\n",
+       " \"'name', String(length=60), table=<project>), \",\n",
+       " \"'descr', String(length=140), table=<project>), \",\n",
+       " \"'skill_level', String(length=20), table=<project>), \",\n",
+       " \"'setting', String(length=20), table=<project>), \",\n",
+       " \"'language', String(length=5), table=<project>), \",\n",
+       " \"'timestamp', DateTime(), table=<project>, default=ColumnDefault(<function datetime.utcnow at 0x7f8f301c0b00>)), \",\n",
+       " \"'user_id', Integer(), ForeignKey('user.id'), table=<project>), schema=None)), PrimaryKeyConstraint(\",\n",
+       " \"'id', Integer(), table=<project>, primary_key=True, nullable=False))}\"]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in \"{ForeignKeyConstraint(<sqlalchemy.sql.base.ColumnCollection object at 0x7f8f301d9810>, None, table=Table('project', MetaData(bind=None), Column('id', Integer(), table=<project>, primary_key=True, nullable=False), Column('category', String(length=60), table=<project>), Column('name', String(length=60), table=<project>), Column('descr', String(length=140), table=<project>), Column('skill_level', String(length=20), table=<project>), Column('setting', String(length=20), table=<project>), Column('language', String(length=5), table=<project>), Column('timestamp', DateTime(), table=<project>, default=ColumnDefault(<function datetime.utcnow at 0x7f8f301c0b00>)), Column('user_id', Integer(), ForeignKey('user.id'), table=<project>), schema=None)), PrimaryKeyConstraint(Column('id', Integer(), table=<project>, primary_key=True, nullable=False))}\".split('Column('):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-02T05:40:44.340163Z",
+     "iopub.status.busy": "2021-04-02T05:40:44.339622Z",
+     "iopub.status.idle": "2021-04-02T05:40:44.352903Z",
+     "shell.execute_reply": "2021-04-02T05:40:44.351603Z",
+     "shell.execute_reply.started": "2021-04-02T05:40:44.340098Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['60']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "re.findall(r\"length=(.+?)\\)\", \"'name', String(length=60), table=<project>), \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-02T05:39:03.331669Z",
+     "iopub.status.busy": "2021-04-02T05:39:03.331201Z",
+     "iopub.status.idle": "2021-04-02T05:39:03.347517Z",
+     "shell.execute_reply": "2021-04-02T05:39:03.341628Z",
+     "shell.execute_reply.started": "2021-04-02T05:39:03.331610Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'length=' in 'ing(length=60),'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
