--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -415,34 +415,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-02-20T18:16:04.915834Z",
-     "iopub.status.busy": "2021-02-20T18:16:04.915090Z",
-     "iopub.status.idle": "2021-02-20T18:16:04.927689Z",
-     "shell.execute_reply": "2021-02-20T18:16:04.926497Z",
-     "shell.execute_reply.started": "2021-02-20T18:16:04.915522Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "x={1:0,2:0}\n",
-    "for i in x:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "execution": {
@@ -479,24 +451,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-02-20T17:11:49.964100Z",
-     "iopub.status.busy": "2021-02-20T17:11:49.963558Z",
-     "iopub.status.idle": "2021-02-20T17:11:49.972452Z",
-     "shell.execute_reply": "2021-02-20T17:11:49.969656Z",
-     "shell.execute_reply.started": "2021-02-20T17:11:49.963999Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import fooof,\\\n",
-    "        numpy"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {
     "execution": {
@@ -523,140 +477,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-04-02T05:49:10.628045Z",
-     "iopub.status.busy": "2021-04-02T05:49:10.627547Z",
-     "iopub.status.idle": "2021-04-02T05:49:10.642922Z",
-     "shell.execute_reply": "2021-04-02T05:49:10.641728Z",
-     "shell.execute_reply.started": "2021-04-02T05:49:10.627980Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'category': 60,\n",
-       " 'name': 60,\n",
-       " 'descr': 140,\n",
-       " 'skill_level': 20,\n",
-       " 'setting': 20,\n",
-       " 'language': 5}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "col_char_lim(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-04-02T04:28:59.132417Z",
-     "iopub.status.busy": "2021-04-02T04:28:59.131923Z",
-     "iopub.status.idle": "2021-04-02T04:28:59.142585Z",
-     "shell.execute_reply": "2021-04-02T04:28:59.141041Z",
-     "shell.execute_reply.started": "2021-04-02T04:28:59.132356Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"{ForeignKeyConstraint(<sqlalchemy.sql.base.ColumnCollection object at 0x7f8f301d9810>, None, table=Table('project', MetaData(bind=None), \",\n",
-       " \"'id', Integer(), table=<project>, primary_key=True, nullable=False), \",\n",
-       " \"'category', String(length=60), table=<project>), \",\n",
-       " \"'name', String(length=60), table=<project>), \",\n",
-       " \"'descr', String(length=140), table=<project>), \",\n",
-       " \"'skill_level', String(length=20), table=<project>), \",\n",
-       " \"'setting', String(length=20), table=<project>), \",\n",
-       " \"'language', String(length=5), table=<project>), \",\n",
-       " \"'timestamp', DateTime(), table=<project>, default=ColumnDefault(<function datetime.utcnow at 0x7f8f301c0b00>)), \",\n",
-       " \"'user_id', Integer(), ForeignKey('user.id'), table=<project>), schema=None)), PrimaryKeyConstraint(\",\n",
-       " \"'id', Integer(), table=<project>, primary_key=True, nullable=False))}\"]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for i in \"{ForeignKeyConstraint(<sqlalchemy.sql.base.ColumnCollection object at 0x7f8f301d9810>, None, table=Table('project', MetaData(bind=None), Column('id', Integer(), table=<project>, primary_key=True, nullable=False), Column('category', String(length=60), table=<project>), Column('name', String(length=60), table=<project>), Column('descr', String(length=140), table=<project>), Column('skill_level', String(length=20), table=<project>), Column('setting', String(length=20), table=<project>), Column('language', String(length=5), table=<project>), Column('timestamp', DateTime(), table=<project>, default=ColumnDefault(<function datetime.utcnow at 0x7f8f301c0b00>)), Column('user_id', Integer(), ForeignKey('user.id'), table=<project>), schema=None)), PrimaryKeyConstraint(Column('id', Integer(), table=<project>, primary_key=True, nullable=False))}\".split('Column('):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-04-02T05:40:44.340163Z",
-     "iopub.status.busy": "2021-04-02T05:40:44.339622Z",
-     "iopub.status.idle": "2021-04-02T05:40:44.352903Z",
-     "shell.execute_reply": "2021-04-02T05:40:44.351603Z",
-     "shell.execute_reply.started": "2021-04-02T05:40:44.340098Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['60']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import re\n",
-    "re.findall(r\"length=(.+?)\\)\", \"'name', String(length=60), table=<project>), \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-04-02T05:39:03.331669Z",
-     "iopub.status.busy": "2021-04-02T05:39:03.331201Z",
-     "iopub.status.idle": "2021-04-02T05:39:03.347517Z",
-     "shell.execute_reply": "2021-04-02T05:39:03.341628Z",
-     "shell.execute_reply.started": "2021-04-02T05:39:03.331610Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'length=' in 'ing(length=60),'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Pandas\n",
+    "\n",
+    "original csv now on Drive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-11T21:48:21.342245Z",
+     "iopub.status.busy": "2021-04-11T21:48:21.341707Z",
+     "iopub.status.idle": "2021-04-11T21:48:21.352994Z",
+     "shell.execute_reply": "2021-04-11T21:48:21.347104Z",
+     "shell.execute_reply.started": "2021-04-11T21:48:21.342178Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-11T21:49:59.986297Z",
+     "iopub.status.busy": "2021-04-11T21:49:59.985947Z",
+     "iopub.status.idle": "2021-04-11T21:50:00.280496Z",
+     "shell.execute_reply": "2021-04-11T21:50:00.279077Z",
+     "shell.execute_reply.started": "2021-04-11T21:49:59.986258Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('./app/data/InstitutionCampus.csv')\n",
+    "schools = tuple(df[df.LocationType == 'Institution']['LocationName'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-11T21:50:16.445370Z",
+     "iopub.status.busy": "2021-04-11T21:50:16.444769Z",
+     "iopub.status.idle": "2021-04-11T21:50:16.492372Z",
+     "shell.execute_reply": "2021-04-11T21:50:16.477252Z",
+     "shell.execute_reply.started": "2021-04-11T21:50:16.445301Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('./app/data/colleges.json','w') as f:\n",
+    "    json.dump(schools,f)"
+   ]
   }
  ],
  "metadata": {
