--- a/backend/project_matching.ipynb
+++ b/backend/project_matching.ipynb
@@ -561,6 +561,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-08-14T00:00:58.047343Z",
+     "iopub.status.busy": "2021-08-14T00:00:58.046697Z",
+     "iopub.status.idle": "2021-08-14T00:00:58.057752Z",
+     "shell.execute_reply": "2021-08-14T00:00:58.055715Z",
+     "shell.execute_reply.started": "2021-08-14T00:00:58.047273Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'asdasd_eqwwe'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'_'.join(\"asdasd eqwwe\".split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-08-14T00:04:18.344452Z",
+     "iopub.status.busy": "2021-08-14T00:04:18.343933Z",
+     "iopub.status.idle": "2021-08-14T00:04:18.363731Z",
+     "shell.execute_reply": "2021-08-14T00:04:18.360724Z",
+     "shell.execute_reply.started": "2021-08-14T00:04:18.344385Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x={1:2}\n",
+    "list(x.keys()) + [2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-08-14T01:03:34.176773Z",
+     "iopub.status.busy": "2021-08-14T01:03:34.171859Z",
+     "iopub.status.idle": "2021-08-14T01:03:34.206292Z",
+     "shell.execute_reply": "2021-08-14T01:03:34.202347Z",
+     "shell.execute_reply.started": "2021-08-14T01:03:34.176547Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 1:\n",
+    "    pass\n",
+    "    print(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
